@@ -12,7 +12,13 @@
 	},
 	"attributes": {
 		"handbook": {
-			"ignoreCreativeInvStacks": true
+          "ignoreCreativeInvStacks": true,
+          "extraSections": [
+            {
+              "title": "expandedfoods:item-handbooktitle-softresin",
+              "text": "expandedfoods:item-handbooktext-softresin"
+            }
+          ]
 		},
 		"inBowlShape": { "base": "game:block/food/meal/liquid" },
 		"waterTightContainerProps": {
