@@ -1,7 +1,7 @@
 {
   "type": "content",
   "name": "Expanded Foods",
-  "version": "2.0.0-dev.5",
+  "version": "2.0.0-dev.6",
   "networkVersion": null,
   "description": "New recipes for existing food types.",
   "modID": "expandedfoods",
