@@ -84,10 +84,12 @@ On hiatus until Wildcraft Herbs & Spices is updated
 - Yogurt can be added to fruit bars in place of gelatin
 - Pemmican can be placed in stacks
 - Do stuff with bamboo shoots? idk
+- Irontack can be thrown as a rock/used as sling ammo
 
 HANDBOOK THINGS:
 - Muffins and fruit bread have default visuals in the handbook
-- Sap collecting info moved from handbook guide to spile and sap entries
+- Sap collecting info moved from handbook guide to spile and sap entries - DONE!!!
+- More handbook items linked together 
 
 REBALANCING:
 - Total review of how "nutritionPropsWhenInMeal" is used; removed from cheese patch since vanilla already has this property
